crates/agui/tests/snapshots/protocol__run_plain_text.snap
---
source: crates/agui/tests/protocol.rs
expression: events
---
[
  {
    "type": "RUN_STARTED",
    "threadId": "t-1",
    "runId": "r-text"
  },
  {
    "type": "TEXT_MESSAGE_START",
    "messageId": "r-text-msg-1",
    "role": "assistant"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-text-msg-1",
    "delta": "Hell"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-text-msg-1",
    "delta": "o wo"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-text-msg-1",
    "delta": "rld"
  },
  {
    "type": "TEXT_MESSAGE_END",
    "messageId": "r-text-msg-1"
  },
  {
    "type": "RUN_FINISHED",
    "threadId": "t-1",
    "runId": "r-text",
    "result": {
      "stopReason": "end_turn",
      "usage": {}
    }
  }
]
