crates/agui/tests/snapshots/protocol__run_provider_error_mid_stream.snap
---
source: crates/agui/tests/protocol.rs
expression: events
---
[
  {
    "type": "RUN_STARTED",
    "threadId": "t-1",
    "runId": "r-err"
  },
  {
    "type": "TEXT_MESSAGE_START",
    "messageId": "r-err-msg-1",
    "role": "assistant"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-err-msg-1",
    "delta": "Par"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-err-msg-1",
    "delta": "tia"
  },
  {
    "type": "TEXT_MESSAGE_CONTENT",
    "messageId": "r-err-msg-1",
    "delta": "l"
  },
  {
    "type": "TEXT_MESSAGE_END",
    "messageId": "r-err-msg-1"
  },
  {
    "type": "RUN_ERROR",
    "message": "provider exploded"
  }
]
